--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <button id="skipButton" class="skip-button hidden">Пропустить</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html> 
